@@ -7,14 +7,17 @@ module Huberry
 				extend ClassMethods
 				include InstanceMethods
 				
-				cattr_accessor :login_field
+				cattr_accessor :hashed_password_field, :login_field, :password_field, :salt_field
+				self.hashed_password_field = options[:hashed_password_field] || :hashed_password
 				self.login_field = options[:login_field] || :email
+				self.password_field = options[:password_field] || :password
+				self.salt_field = options[:salt_field] || :salt
 				
-				attr_accessor :password, :password_confirmation
+				attr_accessor self.password_field, "#{self.password_field}_confirmation".to_sym
 	
 				validates_presence_of self.login_field
-  			validates_presence_of :password, :if => :password_required?
-  			validates_confirmation_of :password, :if => :password_required?
+  			validates_presence_of self.password_field, :if => :password_required?
+  			validates_confirmation_of self.password_field, :if => :password_required?
 	
   			before_save :hash_password
 			end
@@ -33,7 +36,7 @@ module Huberry
 		
 		module InstanceMethods
 			def authenticated?(password)
-				self.hashed_password == self.class.digest(password.to_s + self.salt.to_s)
+				send(self.class.hashed_password_field) == self.class.digest(password.to_s + send(self.class.salt_field).to_s)
       end
 
 			def password_changed?
@@ -42,9 +45,9 @@ module Huberry
 
       def reset_password(new_password = nil)
         new_password = generate_salt[0..7] if new_password.blank?
-				self.salt = nil
-				self.password = new_password
-				self.password_confirmation = new_password
+				send("#{self.class.salt_field}=", nil)
+				send("#{self.class.password_field}=", new_password)
+				send("#{self.class.password_field}_confirmation=", new_password)
 				@password_changed = true
       end
 
@@ -60,11 +63,12 @@ module Huberry
         end
 
         def hash_password
-					self.salt = generate_salt if self.salt.blank?
-					self.hashed_password = self.class.digest(self.password.to_s + self.salt.to_s)
+					send("#{self.class.salt_field}=", generate_salt) if send("#{self.class.salt_field}").blank?
+					send("#{self.class.hashed_password_field}=", self.class.digest(send(self.class.password_field).to_s + send(self.class.salt_field).to_s))
         end
   
         def password_required?
+					send(self.class.hashed_password_field).blank? || !send(self.class.password_field).blank?
 					self.hashed_password.blank? || !self.password.blank?
         end
 		end
